1.2.0 - 2015-02-26

  1. Fixed reboots on CentOS 7.
  2. Fixed Ambari-plugin support of reusing persistent disks across deployments.
  3. Added support for Apache Flink.
  4. Made all UPLOAD_FILES be relative to the bdutil directory.
  5. Added basic HBase, CDH, and Storm plugins for bdutil.
         ./bdutil -e hbase
         ./bdutil -e cdh
         ./bdutil -e storm
  6. Only symlink the GCS connector for Client nodes.
  7. Fixed memory allocation for Spark executors running on YARN; Created
     extension extensions/spark/spark_on_yarn_env.sh to support Spark
     on YARN without Spark daemons. the combination of spark_env.sh and
     hadoop2_env.sh will allow the user to submit Spark Jobs to either the
     Spark Master or YARN.
  8. Enabled restart spark processes on reboot.
  9. Added support for the GCS connector with ambari_manual_env.sh. See
     the "Can I deploy HDP manually using Ambari" section in
     platforms/hdp/README.md
  10. Added an experimental env file to enable cluster resizing.
        See extensions/google/experimental/resize_env.sh.
  11. Updated default Spark version to 1.2.1.
  12. Updated Spark driver memory settings to scale with VM size.
  13. Added import_env support to generate_config.  For example:
        "./bdutil -e spark -b my-bucket -p my-project generate_config my_env.sh"
        makes my_env.sh contain "import_env /path/to/spark_env.sh".
  14. Use default mount options to avoid SELinux issues on reboot.


1.1.0 - 2015-01-22

  1. Added plugin for deploying Ambari/HDP with:
         ./bdutil -e platforms/hdp/ambari_env.sh deploy
  2. Set dfs.replication to 2 under conf/hadoop*/hdfs-template.xml; this suits
     PD deployments better than r=3, but if deploying with HDFS residing on
     non-PD storage, the value should be reverted to 3.
  3. Enabled Spark EventLog for Spark deployments, logging to
     gs://${CONFIGBUCKET}/spark-eventlog-base/${MASTER_HOSTNAME}
  4. Migrated off of misc deprecated fields in favor of using