@@ -1,3 +1,10 @@
+1.x.x - 2015-xx-xx
+
+  1. Added contents of $SPARK_INSTALL_DIR/lib to SPARK_CLASSPATH, excluding
+     spark-assembly-* and spark-examples-*; this allows spark-sql to correctly
+     run out-of-the-box.
+
+
 1.2.0 - 2015-02-26
 
   1. Fixed reboots on CentOS 7.
